Fix #11010 Vertical scrollbar on map viewer (#11015) (#11032)

--- a/web/client/product/assets/css/viewer.css
+++ b/web/client/product/assets/css/viewer.css
@@ -16,6 +16,10 @@ html, body, #container, .fill {
     background-color: #EEE;
 }
 
+.viewer > .ms2-border-layout-body > .ms2-border-layout-content {
+    overflow-y: hidden;
+}
+
 #map {
     position:absolute;
     width: 100%;
